--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Team</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <ul></ul>
+    <header>
+        <h1>Our team</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum assumenda temporibus praesentium, saepe quidem dolores incidunt voluptate nobis</p>
+    </header>
+    <main>
+    </main>
     <script src="js/main.js"></script>
 </body>
 </html>
